--- a/ClientTest/ClientTest.vcxproj
+++ b/ClientTest/ClientTest.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{2c21d4a1-7fb7-48a6-969b-8ded49bf26b4}</ProjectGuid>
-    <RootNamespace>DroneServer</RootNamespace>
+    <ProjectGuid>{86b878b9-c18e-4de6-bc8d-b12605e95892}</ProjectGuid>
+    <RootNamespace>ClientTest</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -154,10 +154,6 @@
       <AdditionalDependencies>tacopie.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="Drone.hpp" />
-    <ClInclude Include="DroneManager.hpp" />
-  </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
