Fix compilation errors.

--- a/DroneServer/DroneServer.vcxproj.filters
+++ b/DroneServer/DroneServer.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RealDrone.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SimulatedDrone.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
