--- a/DroneServer/DroneServer.vcxproj.filters
+++ b/DroneServer/DroneServer.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="DroneManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DroneComms.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SimulatedDrone.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DroneComms.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
